# Voice2Txt

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  settings.gradle.kts
.github/workflows/: release.yml  tests.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/assets/: LICENSE_ASSETS.txt
app/src/androidTest/java/de/dervomsee/voice2txt/: CopyTranscriptionUiTest.kt  ExampleInstrumentedTest.kt  SettingsManagerTest.kt  TranscriptionTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c
app/src/main/java/de/dervomsee/voice2txt/: MainActivity.kt
app/src/main/java/de/dervomsee/voice2txt/audio/: AudioConverter.kt  AudioDecoder.kt  AudioRecorder.kt  BandpassFilter.kt
app/src/main/java/de/dervomsee/voice2txt/data/: SettingsRepository.kt
app/src/main/java/de/dervomsee/voice2txt/download/: ModelDownloader.kt
app/src/main/java/de/dervomsee/voice2txt/engine/: GenAISpeechEngine.kt  SpeechEngine.kt  WhisperLib.kt  WhisperSpeechEngine.kt
app/src/main/java/de/dervomsee/voice2txt/settings/: SettingsManager.kt
app/src/main/java/de/dervomsee/voice2txt/summary/: MLKitSummaryEngine.kt  SummaryEngine.kt
app/src/main/java/de/dervomsee/voice2txt/ui/: MainViewModel.kt
app/src/main/java/de/dervomsee/voice2txt/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/de/dervomsee/voice2txt/whisper/: ModelDownloader.kt  WhisperContext.kt  WhisperLib.kt  WhisperModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_speedy_back.xml  ic_launcher_speedy_fore.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_speedy.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/test/java/de/dervomsee/voice2txt/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
